--- a/Webscraping library project.ipynb
+++ b/Webscraping library project.ipynb
@@ -13,7 +13,7 @@
    "id": "32294879",
    "metadata": {},
    "source": [
-    "The goal of the project is to scrape all available data on the website https://books.toscrape.com/ and organize it into a spreadsheet that can be used for data analysis. The website is fake bookstore with 1000 books. For each one we can gather:\n",
+    "The goal of the project is to scrape all available data from the website https://books.toscrape.com/ and organize it into a spreadsheet that can be used for data analysis. The website is fake bookstore with 1000 books. The data we can gather for each book consists in:\n",
     "- Title\n",
     "- Rating\n",
     "- Price\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62ae3546",
+   "id": "de74a82f",
    "metadata": {},
    "source": [
     "Let's start by importing the required libraries."
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1aec8496",
+   "id": "96e572e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00901e9c",
+   "id": "91d10d2b",
    "metadata": {},
    "source": [
     "The website catalogue has 50 pages, with 20 books for each one. We start by scraping the first page. Our objective is to get a list with all the data we're interested in for the first 20 books. \n",
     "\n",
-    "With the following lines we send retrieve the html code from the first page and store it as the variable \"soup\"."
+    "With the following lines we retrieve the html code from the page and store it as the variable \"soup\"."
    ]
   },
   {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "860a8e15",
+   "id": "ea13c207",
    "metadata": {},
    "source": [
     "Next, we define a function that returns all the titles of the first 20 books."
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4672ded6",
+   "id": "2d4427a6",
    "metadata": {},
    "source": [
     "Same thing with the prices..."
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ffb6426",
+   "id": "2161e3be",
    "metadata": {},
    "source": [
     "... and with the ratings (measured on a scale from one to five)."
@@ -250,10 +250,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7989104",
+   "id": "3cfb9297",
    "metadata": {},
    "source": [
-    "Getting the number of stocks is a bit trickier as they are not reported in the catalogue. In order to scrape them we need to send a request to each book's individual webpage and then procede from there."
+    "Getting the number of stocks is a bit trickier as they are not reported in the catalogue. In order to scrape them we need to send a request to all individual books' webpage and procede from there."
    ]
   },
   {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0196b0af",
+   "id": "567a736f",
    "metadata": {},
    "source": [
     "We have scraped the number of stocks of the first book, 19 more to go..."
@@ -372,10 +372,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58bb5319",
+   "id": "a1d7e359",
    "metadata": {},
    "source": [
-    "As for the genre, we incur in the same problem: we have to scrape it from each books'page. The good news is, since we already have the list of urls, half of the job is already done."
+    "As for the genre, we incur in the same problem: we have to scrape it from each books' page. The good news is, since we already have the list of urls, half of the job is already done."
    ]
   },
   {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d52ddf33",
+   "id": "61d0dd17",
    "metadata": {},
    "source": [
     "We have succesfully gathered a list for all the titles, prices, ratings, stocks and genres of the first 20 books! We can create a dataframe to visualize our results:"
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8002c11f",
+   "id": "dbd90328",
    "metadata": {},
    "source": [
     "Now that our scraping functions are up and running, all we need to do is create a loop that scrapes all the pages in the catalogue (it will take some time)."
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66fb5ce9",
+   "id": "fcb315c4",
    "metadata": {},
    "source": [
     "We now have all the data that we need. Time to summarized it into our final dataframe."
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9e10600",
+   "id": "2c921e68",
    "metadata": {},
    "source": [
     "Only one thing left to do: export the dataframe into a format that can be used in Excel. "
