--- a/Webscraping library project.ipynb
+++ b/Webscraping library project.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de74a82f",
+   "id": "1ae63b61",
    "metadata": {},
    "source": [
     "Let's start by importing the required libraries."
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "96e572e3",
+   "id": "82205484",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d10d2b",
+   "id": "a4c703f3",
    "metadata": {},
    "source": [
     "The website catalogue has 50 pages, with 20 books for each one. We start by scraping the first page. Our objective is to get a list with all the data we're interested in for the first 20 books. \n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea13c207",
+   "id": "d586d409",
    "metadata": {},
    "source": [
     "Next, we define a function that returns all the titles of the first 20 books."
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d4427a6",
+   "id": "27bffab6",
    "metadata": {},
    "source": [
     "Same thing with the prices..."
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2161e3be",
+   "id": "1fff0385",
    "metadata": {},
    "source": [
     "... and with the ratings (measured on a scale from one to five)."
@@ -250,15 +250,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cfb9297",
+   "id": "1b459c04",
    "metadata": {},
    "source": [
-    "Getting the number of stocks is a bit trickier as they are not reported in the catalogue. In order to scrape them we need to send a request to all individual books' webpage and procede from there."
+    "Getting the stock is a bit trickier as they are not reported in the catalogue. In order to scrape them we need to send a request to all individual books' webpage and procede from there."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "a055c542",
    "metadata": {},
    "outputs": [
@@ -268,19 +268,19 @@
        "[22]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Stock availability is reported in the each book's webpage\n",
-    "# We start by scraping the stocks data for the first book\n",
+    "# We start by scraping the stock data for the first book\n",
     "# The url of the first book's webpage is:\n",
     "\n",
     "url_stock = \"https://books.toscrape.com/catalogue/a-light-in-the-attic_1000/index.html\"\n",
     "\n",
-    "# We define a function that gets the stocks from the page:\n",
+    "# We define a function that gets the stock from the page:\n",
     "\n",
     "def scrap_stocks(url_stock):\n",
     "    request_stock = requests.get(url_stock).text\n",
@@ -300,10 +300,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "567a736f",
+   "id": "2698b3ae",
    "metadata": {},
    "source": [
-    "We have scraped the number of stocks of the first book, 19 more to go..."
+    "We have scraped the number of stock of the first book, 19 more to go..."
    ]
   },
   {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1d7e359",
+   "id": "e6336350",
    "metadata": {},
    "source": [
     "As for the genre, we incur in the same problem: we have to scrape it from each books' page. The good news is, since we already have the list of urls, half of the job is already done."
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "7da80dc2",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
        "['Poetry']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
     "    g = g.string   # convert it into a navigable string\n",
     "    genre = []\n",
     "    genre.append(g)\n",
-    "    return genre       # same procedure of stocks\n",
+    "    return genre       # same procedure of stock\n",
     "\n",
     "scrap_genre(url_genre)\n",
     "\n",
@@ -473,15 +473,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61d0dd17",
+   "id": "9a00299e",
    "metadata": {},
    "source": [
-    "We have succesfully gathered a list for all the titles, prices, ratings, stocks and genres of the first 20 books! We can create a dataframe to visualize our results:"
+    "We have succesfully gathered a list for all the titles, prices, ratings, stock and genres of the first 20 books! We can create a dataframe to visualize our results:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "7d2b3b0b",
    "metadata": {},
    "outputs": [
@@ -724,13 +724,13 @@
        "19        19              Travel  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# We now have a list for the titles, the prices, the ratings, the stocks and the genres.\n",
+    "# We now have a list for the titles, the prices, the ratings, the stock and the genres.\n",
     "# Let's create a dataframe to summarize our data\n",
     "\n",
     "data = {\"Title\": titles, \"Price\": prices, \"Rating\": ratings, \"In stock\": stocks, \"Genre\": genres}\n",
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbd90328",
+   "id": "0663bc08",
    "metadata": {},
    "source": [
     "Now that our scraping functions are up and running, all we need to do is create a loop that scrapes all the pages in the catalogue (it will take some time)."
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcb315c4",
+   "id": "4104a58b",
    "metadata": {},
    "source": [
     "We now have all the data that we need. Time to summarized it into our final dataframe."
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c921e68",
+   "id": "d1e07621",
    "metadata": {},
    "source": [
     "Only one thing left to do: export the dataframe into a format that can be used in Excel. "
